Implement login screen and navigation
- Added LoginScreen.kt with Composable functions for the login UI, including username and password fields, a sign-in button, and basic error handling.
- Implemented LoginViewModel.kt to handle login logic with hardcoded credentials.
- Updated MainActivity.kt to set up NavHost for navigation and display the LoginScreen.
- Added necessary string resources for the login screen.
- Updated dependencies in `build.gradle.kts` and `libs.versions.toml` to include Jetpack Navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SendMoneyApp</string>
+    <string name="login">Sign in</string>
+    <string name="username">Email*</string>
+    <string name="password">Password</string>
+    <string name="welcome_title">SEND MONEY APP</string>
+    <string name="welcome_message">Welcome to Send Money App!</string>
+    <string name="invalid_username">Invalid username</string>
+    <string name="invalid_password">Invalid password</string>
+    <string name="terms_of_service_info">By proceeding you also agree to the Terms of Service
+and Privacy Policy</string>
 </resources>
