--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,4 +8,14 @@
     <string name="invalid_username">اسم المستخدم غير صالح</string>
     <string name="invalid_password">كلمة المرور غير صالحة</string>
     <string name="terms_of_service_info">بالمتابعة، فإنك توافق أيضًا على شروط الخدمة وسياسة الخصوصية.</string>
+    <string name="select_service">اختر الخدمة</string>
+    <string name="select_provider">اختر المزود</string>
+    <string name="submit">إرسال</string>
+    <string name="success">نجاح</string>
+    <string name="warning">تحذير</string>
+    <string name="error">خطأ</string>
+    <string name="ok">نعم</string>
+    <string name="warning_message">يجب تحديد الخدمة أو المزود</string>
+    <string name="request_saved">تم حفظ الطلب بنجاح!</string>
+    <string name="close">إغلاق</string>
 </resources>
