--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="invalid_password">Invalid password</string>
     <string name="terms_of_service_info">By proceeding you also agree to the Terms of Service
 and Privacy Policy</string>
+    <string name="select_service">Select Service</string>
+    <string name="select_provider">Select Provider</string>
+    <string name="submit">Submit</string>
+
+    <string name="success">Success</string>
+    <string name="warning">Warning</string>
+    <string name="error">Error</string>
+    <string name="ok">OK</string>
+    <string name="warning_message">Need to select Service or Provider</string>
+    <string name="request_saved">Request saved successfully!</string>
+    <string name="close">Close</string>
 </resources>
