--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SendMoneyApp</string>
     <string name="login">تسجيل الدخول</string>
     <string name="username">بريد إلكتروني*</string>
-    <string name="password">كلمة المرور</string>
+    <string name="password">كلمة المرور*</string>
     <string name="welcome_title">تطبيق إرسال الأموال</string>
     <string name="welcome_message">مرحباً بكم في تطبيق إرسال الأموال!</string>
     <string name="invalid_username">اسم المستخدم غير صالح</string>
@@ -10,12 +10,14 @@
     <string name="terms_of_service_info">بالمتابعة، فإنك توافق أيضًا على شروط الخدمة وسياسة الخصوصية.</string>
     <string name="select_service">اختر الخدمة</string>
     <string name="select_provider">اختر المزود</string>
-    <string name="submit">إرسال</string>
+    <string name="submit">يرسل</string>
     <string name="success">نجاح</string>
     <string name="warning">تحذير</string>
     <string name="error">خطأ</string>
     <string name="ok">نعم</string>
     <string name="warning_message">يجب تحديد الخدمة أو المزود</string>
     <string name="request_saved">تم حفظ الطلب بنجاح!</string>
+    <string name="saved_requests">الطلبات المحفوظة</string>
+    <string name="request_details">تفاصيل الطلب</string>
     <string name="close">إغلاق</string>
 </resources>
