--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SendMoneyApp</string>
     <string name="login">Sign in</string>
     <string name="username">Email*</string>
-    <string name="password">Password</string>
+    <string name="password">Password*</string>
     <string name="welcome_title">SEND MONEY APP</string>
     <string name="welcome_message">Welcome to Send Money App!</string>
     <string name="invalid_username">Invalid username</string>
@@ -11,7 +11,7 @@
 and Privacy Policy</string>
     <string name="select_service">Select Service</string>
     <string name="select_provider">Select Provider</string>
-    <string name="submit">Submit</string>
+    <string name="submit">SEND</string>
 
     <string name="success">Success</string>
     <string name="warning">Warning</string>
@@ -19,5 +19,7 @@ and Privacy Policy</string>
     <string name="ok">OK</string>
     <string name="warning_message">Need to select Service or Provider</string>
     <string name="request_saved">Request saved successfully!</string>
+    <string name="saved_requests">Saved Requests</string>
+    <string name="request_details">Request Details</string>
     <string name="close">Close</string>
 </resources>
