--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -27,4 +27,5 @@
     <string name="service_name">اسم الخدمة:</string>
     <string name="provider_name">اسم المزود:</string>
     <string name="amount">كمية:</string>
+    <string name="logout">تسجيل الخروج</string>
 </resources>
