--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@ and Privacy Policy</string>
     <string name="service_name">Service name:</string>
     <string name="provider_name">Provider name:</string>
     <string name="amount">Amount:</string>
+    <string name="logout">Logout</string>
     <string name="aed" translatable="false">AED</string>
 </resources>
